refactor: 예외 모델 개편 — ErrorCode 카탈로그 + 발생 지점 ErrorCode 명시
- ErrorCode enum 도입(메시지 카탈로그, code=name(), 상황별 distinct)
- BusinessException: (ErrorCode[, cause], String... args) 생성자 + createMessage()
  형식 "[CODE] 메시지 | context : a|b". 서브타입은 EscalateException(알림 카테고리)·
  KiwoomRateLimitException(@Retryable용)만.
- throw 지점에서 ErrorCode 명시(예: new BusinessException(ErrorCode.KIWOOM_HTTP_ERROR, e, apiId)) —
  상황별 예외 서브클래스는 두지 않음.
- ErrorResponse {code, message} + of() 팩토리, 핸들러/AlertService는 createMessage 사용.
- 예외 위치: 베이스·핸들러·ErrorResponse·AlertService=common, Kiwoom 전용=domain.stock.exception.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>